Add rayon, parallelize matching/scoring

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ authors = ["Andrew Stewart <andrew@stwrt.ca>"]
 [dependencies]
 clap = "2.26.2"
 libc = "0.2"
+rayon = "0.9"
 
 [[bin]]
 name = "rff"
