--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,12 @@ exclude = ["benches/*", "ci/*"]
 [dependencies]
 clap = "2.32.0"
 
+[dev-dependencies]
+criterion = "0.2"
+
+[[bench]]
+name = "matches"
+harness = false
+
 [[bin]]
 name = "rff"
